# Zero-Trust-Architektur

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  docker-compose.yml  files.html  functions.html  functions_vars.html  generate_san_certs.sh  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  main_8cpp_source.html  md_README.html  mtls-client_8cpp.html  mtls-client_8cpp.js  mtls-client_8cpp__incl.map  mtls-client_8cpp__incl.md5  mtls-client_8cpp_ac5bd90491f9cc7370b758977b5918907_icgraph.md5  mtls-client_8cpp_source.html  mtls-server_8cpp.html  mtls-server_8cpp.js  mtls-server_8cpp__incl.map  mtls-server_8cpp__incl.md5  mtls-server_8cpp_a7ad103537184ed8192aa33adde485d2e_cgraph.map  (+34 more)
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  doxygen-gh-pages.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_21.js  all_22.js  all_23.js  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  pages_0.js  (+9 more)
src/: main.cpp  mtls-client.cpp  mtls-server.cpp  shared.cpp  shared.hpp
